add javaFX to build.gradle